# k8s_playground

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/monitoring/: README.md
apps/monitoring/cluster_monitor/: Dockerfile  __init__.py  main.py
apps/monitoring/cluster_monitor/models/: cluster.py
apps/monitoring/cluster_monitor/services/: monitor.py
apps/monitoring/cluster_monitor/utils/: config.py
apps/monitoring/pod_monitor/: Dockerfile  __init__.py  main.py  requirements.txt
apps/monitoring/pod_monitor/models/: metrics.py
apps/monitoring/pod_monitor/services/: kubernetes_service.py  prometheus_service.py  vmware_service.py
apps/monitoring/pod_monitor/utils/: config.py
apps/namespace_ops/: README.md
apps/vmware_integration/: README.md
deployments/monitoring/cluster_monitor/: deployment.yaml
deployments/monitoring/pod_monitor/: configmap.yaml  deployment.yaml  kustomization.yaml  network-policy.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml
deployments/monitoring/pod_monitor/overlays/development/: deployment-patch.yaml  kustomization.yaml
deployments/monitoring/pod_monitor/overlays/production/: deployment-patch.yaml  kustomization.yaml
docs/: deployment.md  development.md  index.md  project_organization.md  security.md  setup.md  vmware_integration.md
tests/unit/: conftest.py
tests/unit/monitoring/pod_monitor/: test_crds.py  test_main.py
tests/unit/monitoring/pod_monitor/models/: test_metrics.py
tests/unit/monitoring/pod_monitor/services/: test_kubernetes_service.py  (+2 more)
(+1 files in other folders)
