[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]
per-file-ignores = [
    "__init__.py:F401",
]
